Update requirements.txt with specific package versions
Removed older versions of sentence-transformers, transformers, and huggingface_hub. Added specific versions for sentence-transformers, torch, and torchvision.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
 streamlit
+sentence-transformers==2.2.2
+torch==2.1.2+cpu
+torchvision==0.16.2+cpu
+--extra-index-url https://download.pytorch.org/whl/cpu
+
+pdf2image
 pytesseract
 Pillow
 PyPDF2
 python-docx
 nltk
-sentence-transformers==2.2.2
-transformers==4.30.2
-huggingface_hub==0.16.4
-torch>=1.9
